edit title name

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main class="content-wrapper">
       <header class="white-text-container section-container">
         <div class="text-center">
-          <h1>I am David Folley</h1>
+          <h1>ຂ້ອຍມີນາມວ່າ ລາຊັນ ວົງແວວດີ</h1>
           <p>Web designer</p>
           <p>
             <a class="fa-icon fa-icon-2x" href="https://facebook.com/" title="">
@@ -73,9 +73,10 @@
                   <div class="col-md-4">
                     <p>
                       <img
-                        src="https://scontent.fvte4-1.fna.fbcdn.net/v/t1.0-9/67619793_986335558364211_2610358677286158336_o.jpg?_nc_cat=101&ccb=1-3&_nc_sid=8bfeb9&_nc_eui2=AeEOKBZEs3qS-ts_SOAxXAJ0Idr_Aa3-25Ah2v8Brf7bkOpJe9tkC12yWq4DmXaY3CEvGKQ6BudPUXsgO2CQlHt0&_nc_ohc=ibzByCgXGkoAX8TiGc2&_nc_oc=AQlEL9ptwVJmbQ8q5rungRtEJpgcWnmNn-_jCZOPuxq6gVIxYO15FPgDJAIKWlQNqEs&_nc_ht=scontent.fvte4-1.fna&oh=20412ac357e4388c4d29b21bf1b1fec9&oe=6078C554"
+                        src="./assets/images/sun.jpg"
                         class="img-responsive"
                         alt=""
+                        style="width:90%"
                       />
                     </p>
                   </div>
